--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,10 @@
             <artifactId>standard</artifactId>
             <version>1.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
 
         <!--Testing-->
         <dependency>
