--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
 
         <!--Utilities-->
         <dependency>
@@ -77,6 +82,7 @@
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
         </dependency>
+
 
         <!--Testing-->
         <dependency>
