--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-### Custom ###
+### Project Specific ###
 src/main/resources/application.properties
+src/main/resources/application.yml
 
+### Maven(?) Stuff ###
 HELP.md
 target/
-.mvn/wrapper/maven-wrapper.jar
+.mvn/wrapper
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -35,19 +37,13 @@ build/
 ### VS Code ###
 .vscode/
 
-# Compiled class file
+### Compiled Class Files ###
 *.class
 
-# Log file
+### Log Files ###
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+### Package Files ###
 *.jar
 *.war
 *.nar
