--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,16 @@
 			<artifactId>validation-api</artifactId>
 		</dependency>
 		
+		<!-- Security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+		</dependency>
+		
 		<!--Utilities-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
